# mcp-projects

./: .gitignore  README.md  pyproject.toml
.claude/: CLAUDE.md
.claude/skills/add-mcp-locally/: SKILL.md
docs/plans/: 2026-02-14-microsoft-todo-design.md  2026-02-14-microsoft-todo-plan.md
servers/apple_notes/: README.md  apple_notes.py  test_apple_notes.py
servers/microsoft_to_do/: README.md  microsoft_to_do.py  test_microsoft_to_do.py
servers/weather/: weather.py
