[project]
name = "mcp-projects"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "markdownify>=1.2.2",
    "mcp[cli]>=1.26.0",
    "msal>=1.34.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
testpaths = ["servers"]
pythonpath = ["servers/apple_notes", "servers/weather", "servers/microsoft_to_do"]
